[package]
name = "auth_service_rust"
version = "0.1.0"
authors = ["Konstantin Salikhov <kostya.salikhov@castle.co>"]

[dependencies]
rocket = { git = "https://github.com/maxdeviant/rocket", branch = "fix-rocket-contrib-nightly" }
rocket_codegen = { git = "https://github.com/maxdeviant/rocket", branch = "fix-rocket-contrib-nightly" }
rocket_contrib = { git = "https://github.com/maxdeviant/rocket", branch = "fix-rocket-contrib-nightly", features = ["json"], default-features = false }
log = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.8.5"
hyper = "0.11.25"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
postgres = "0.15.2"
jsonwebtoken = { git = "https://github.com/JacobChang/jsonwebtoken", branch = "next" }
